--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.6.RELEASE</version>
+		<version>1.5.10.RELEASE</version>
+		<!--see https://stackoverflow.com/questions/49299069/spring-boot-apache-camel-mongodb-integration-issue for why not 2.1.0-->
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -22,9 +23,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<camel-version>2.18.1</camel-version><!-- Migrating to 2.18.2 breaks spring 
+		<camel-version>2.21.0</camel-version><!-- Migrating to 2.18.2 breaks spring
 			boot -->
-		<firebase-admin-version>4.1.0</firebase-admin-version>
+		<firebase-admin-version>5.11.0</firebase-admin-version>
 		<org.btrg.version>1.0.0-SNAPSHOT</org.btrg.version>
 	</properties>
 
@@ -42,7 +43,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-email</artifactId>
-			<version>1.4</version>
+			<version>1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.firebase</groupId>
@@ -93,7 +94,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.7.0</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -102,7 +103,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.0.2</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 				</configuration>
